Moved User DTOs to sub packages
