# swagger/banking.yml
@@ -804,14 +804,9 @@ components:
           format: string
           enum: [admin, employee, client]
         current_account:
-          type: object
-          properties:
-            id:
-              type: integer
-              format: int64
-            iban:
-              type: string
-              pattern: "[A-Z]{2,2}[0-9]{2,2}[A-Z]{4,4}[0,9]{10,10}"
+          $ref: "#/components/schemas/AccountForClientResponse"
+        savings_account:
+          $ref: "#/components/schemas/AccountForClientResponse"
       description: ok
     UserForClientResponse:
       type: object
